examples/datalog/12_errors/05_drop_nonexistent_db_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg drop nonexistent_database_xyz_n12t05
Script error: Failed to drop knowledge graph 'nonexistent_database_xyz_n12t05'
